--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_FIREBASE_PROJECT_ID=dysfunctional-chat
 REACT_APP_FIREBASE_STORAGE_BUCKET=dysfunctional-chat.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=696747860520
 REACT_APP_FIREBASE_APP_ID=1:696747860520:web:859b4917ed19fa6ad48b1d
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-JY4LY59JVP
